test: isolate spool suites
Colocate spool-owned tests with their dependency roots and run namespaces
concurrently to expose hidden shared-state coupling while halving suite time.
Keep serial, focused, and fresh-JVM stress modes for diagnosis.